ci: build refactor/v2, and close the migration tails
CI never built this branch. ci.yml triggered on main only, so all 41 commits on
refactor/v2 were verified on one macOS arm64 machine and nowhere else.

CI now runs on refactor/v2 as well, and covers more than it did:
- scalafmtCheckAll
- compile and Test/compile across the ten aggregated modules, which builds all
  four Spark lines against the shared spark-base sources
- integration40/Test/compile on its own, since that module is no longer part of
  the aggregate
- Scala 2.12 cross-compile of core, compat and client
- the unit tests, with only the two suites that load the .so excluded

Three things the migration left behind are closed here.

integration-4.0 is out of root's aggregate. After the migration its suites
became a plain Test configuration, so `sbt test` picked them up and failed
without a live Milvus. Under 1.x they sat in the `it` configuration and were
never picked up; this restores that.

The native libraries move from src/main/resources/native to
native-storage/src/main/resources/native, which is where they belong and which
finally empties src/. Dockerfile, Makefile, both demo scripts, .gitignore, the
user guide and the test java.library.path all follow. The fat jar is unchanged:
30516 entries before and after, zero diff.

Root drops the settings it no longer has sources for: the `it` configuration,
the 1.x native test settings, and its own resource directory.

One real bug found on the way. Modules.legacyDeps handed every line
Dependencies.sparkMLlib, which is pinned at 4.0.0. spark-mllib_2.12 does not
exist for Spark 4, so the 3.5 line could not resolve on Scala 2.12; on 2.13 it
silently pulled Spark 4.0's MLlib into the 3.5 line. It is now pinned per line.

The 3.5 line still cannot produce Scala 2.12 artifacts: the upstream
milvus-storage Java binding it depends on is published for 2.13 only. That
clears when native-storage replaces the binding, which is the one migration tail
still open.

Verifi